--- a/web/cyber-sleuths-web-security-havoc/setup/static/css/styles.css
+++ b/web/cyber-sleuths-web-security-havoc/setup/static/css/styles.css
@@ -1,51 +1,48 @@
 .gradient-custom {
 
-    color: #fff;
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgb(65, 15, 118), rgba(37, 117, 252, 1))
+  background: linear-gradient(to right, rgb(65, 15, 118), rgba(37, 117, 252, 1))
+
 }
 
+
+
+.btn-primary {
+  width: 100%;
+}
+
+.register-link {
+  text-align: center;
+}
+
+.card {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
+
 .container {
-    max-width: 500px;
-    margin: 100px auto;
-  }
+  max-width: 600px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
 
-  .chat-box {
-    background-color: #222;
-    padding: 20px;
-    border-radius: 8px;
-  }
+.chatbox {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 20px;
+  height: 300px;
+  overflow-y: scroll;
+}
 
-  .message-area {
-    height: 200px;
-    background-color: #111;
-    overflow-y: auto;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
+.message {
+  margin-bottom: 10px;
+}
 
-  .message {
-    margin-bottom: 10px;
-  }
-
-  .message strong {
-    color: #3498db;
-  }
-
-  .input-group-text {
-    background-color: #222;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-  }
-
-  .input-group-text:hover {
-    background-color: #333;
-  }
-
-  .form-control {
-    background-color: #333;
-    border: none;
-    color: #fff;
-  }
+.input-group {
+  margin-top: 20px;
+}
