web(zenon): fix app

--- a/web/zenon/setup/webapp/app/templates/login.html
+++ b/web/zenon/setup/webapp/app/templates/login.html
@@ -48,7 +48,8 @@
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({ username, password })
-        }).then(response => {
+        })
+        .then(response => {
             if (response.redirected) {
                 window.location.href = response.url;
             }
