ci(challops): add challenge readme

--- a/.github/actions/generate-readme/challenge_README.jinja
+++ b/.github/actions/generate-readme/challenge_README.jinja
@@ -1,7 +1,7 @@
 # {{ challenge.name }}
-**Category**: {{ chalenge.category }}
+**Category**: {{ challenge.category }}
 
-**Author**: {{ chalenge.author }}
+**Author**: {{ challenge.author }}
 
 ## Description
 
