--- a/.github/actions/generate-readme/challenge_README.jinja
+++ b/.github/actions/generate-readme/challenge_README.jinja
@@ -1,4 +1,8 @@
 # {{ challenge.name }}
+{% if challenge.type == "dynamic_docker" %}
+[![Try in PWD](https://raw.githubusercontent.com/play-with-docker/stacks/master/assets/images/button.png)](https://labs.play-with-docker.com/?stack={{ challenge.docker_compose_url }})
+{% endif %}
+
 **Category**: {{ challenge.category }}
 
 **Author**: {{ challenge.author }}
